fix markovchain class to handle None inputs

--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 566,
+   "execution_count": 574,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
     "        \n",
     "    @transition_matrix.setter\n",
     "    def transition_matrix(self, transition_matrix):\n",
-    "        if transition_matrix:        \n",
+    "        if transition_matrix is not None:        \n",
     "            transition_matrix = np.array(transition_matrix)\n",
     "            assert transition_matrix.shape[0] == transition_matrix.shape[1], \\\n",
     "                'transition matrix needs to be square'\n",
@@ -76,7 +76,7 @@
     "    \n",
     "    @state_vector.setter\n",
     "    def state_vector(self, state_vector):\n",
-    "        if state_vector:\n",
+    "        if state_vector is not None:\n",
     "            state_vector = np.array(state_vector).reshape(1,-1)\n",
     "            assert state_vector.sum(axis=1) == 1, \\\n",
     "                'state vector needs to sum to one'\n",
@@ -392,8 +392,8 @@
     "import numpy as np\n",
     "import warnings\n",
     "\n",
-    "from statsmodels.tsa.regime_switching.markov_regression import MarkovRegression\n",
-    "from hmmlearn.hmm import GaussianHMM\n",
+    "\n",
+    "\n",
     "\n",
     "#from src.dists import GaussianMixtureDistribution\n",
     "#from src.markov import MarkovChain\n",
@@ -431,7 +431,9 @@
     "        \n",
     "        assert package in ['statsmodels', 'hmmlearn', 'baumwelch'], 'package unknown'\n",
     "        \n",
-    "        if package == 'statsmodels':\n",
+    "        if package == 'statsmodels':            \n",
+    "            from statsmodels.tsa.regime_switching.markov_regression import MarkovRegression\n",
+    "            \n",
     "            #if start_params is None:\n",
     "                #start_params = np.random.randn(self.k+self.k**2)*0.01\n",
     "                #m = y.mean()\n",
@@ -450,7 +452,8 @@
     "            self.filt_prob_ = model.filtered_marginal_probabilities\n",
     "        \n",
     "        if package == 'hmmlearn':\n",
-    "\n",
+    "            from hmmlearn.hmm import GaussianHMM\n",
+    "            \n",
     "            assert self.switch_var is True and self.switch_const is True, 'only implemented for fully parametrised components'\n",
     "            t_index = y.index\n",
     "            y = np.expand_dims(y.values, axis=1)\n",
@@ -737,10 +740,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 592,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class HMM(MarkovChain):\n",
+    "    \n",
+    "    '''\n",
+    "    Hidden Markov Model class\n",
+    "    '''\n",
+    "    \n",
+    "    def __init__(self, emission_models=(), transition_matrix=None, state_vector=None):#, start_probas=None, switch_var=True, switch_const=True, k=None):\n",
+    "        self.transition_matrix = transition_matrix\n",
+    "        self.state_vector = state_vector\n",
+    "        self.emission_models = emission_models\n",
+    "        self.is_fitted = False\n",
+    "        \n",
+    "        \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 593,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hmm = HMM(transition_matrix=np.array([[0.99,0.01],[0.2,0.8]]), state_vector=[0,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 594,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.95238095, 0.04761905])"
+      ]
+     },
+     "execution_count": 594,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hmm.steady_state()"
+   ]
   },
   {
    "cell_type": "code",
