fix bug in MarkovChain.rvs

--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -2,27 +2,92 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1199,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "all(np.ones([2,2]).sum(axis=1)==1)"
+    "import numpy as np\n",
+    "import warnings\n",
+    "from scipy.stats import norm\n",
+    "\n",
+    "\n",
+    "class BaseModel:\n",
+    "    \n",
+    "    '''\n",
+    "    Base class for models\n",
+    "    '''\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def score(self, Y):\n",
+    "        \n",
+    "        '''\n",
+    "        Returns the log-likelihood of an observation sequence\n",
+    "        '''\n",
+    "        \n",
+    "        score = np.log(self.pdf(Y)).sum()\n",
+    "        return score\n",
+    "\n",
+    "\n",
+    "class NormalModel(BaseModel):\n",
+    "    \n",
+    "    '''\n",
+    "    i.i.d. normal distribution model\n",
+    "    '''\n",
+    "    \n",
+    "    def __init__(self, mu=0, sigma=1):\n",
+    "        self.mu = mu\n",
+    "        self.sigma = sigma\n",
+    "    \n",
+    "    @property\n",
+    "    def loc(self):\n",
+    "        return self.mu\n",
+    "    \n",
+    "    @property\n",
+    "    def scale(self):\n",
+    "        return self.sigma\n",
+    "    \n",
+    "        \n",
+    "    def fit(self, Y, weights=None):\n",
+    "        \n",
+    "        '''\n",
+    "        Fits the model parameters to an observation sequence.\n",
+    "        weights are optional.\n",
+    "        '''\n",
+    "        \n",
+    "        # prepare\n",
+    "        Y = np.array(Y)\n",
+    "        if weights is None:\n",
+    "            weights = np.ones(Y.shape)\n",
+    "        else:\n",
+    "            weights = np.array(weights)\n",
+    "        \n",
+    "        # estimate mean\n",
+    "        mean = np.average(Y, weights=weights)\n",
+    "        \n",
+    "        # estimate variance\n",
+    "        errors = (Y-mean)**2\n",
+    "        variance = np.average(errors, weights=weights)\n",
+    "        \n",
+    "        # update\n",
+    "        self.mu = mean\n",
+    "        self.sigma = np.sqrt(variance)\n",
+    "        \n",
+    "    def pdf(self, Y):\n",
+    "        \n",
+    "        '''\n",
+    "        Returns the likelihood of each observation in an observation sequence.\n",
+    "        '''\n",
+    "        \n",
+    "        Y = np.array(Y)\n",
+    "        pdf = norm(loc=self.mu, scale=self.sigma).pdf(Y)\n",
+    "        return pdf\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 929,
+   "execution_count": 1213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,9 +237,10 @@
     "        If t_steps is zero, only the current state is drawn.\n",
     "        '''\n",
     "        \n",
-    "        sample = np.random.choice(mc.n_states, size=1, p=mc.state_vector.squeeze())\n",
+    "        sample = np.random.choice(mc.n_states, size=1, p=self.state_vector.squeeze())\n",
     "        for t in range(1, t_steps+1):\n",
-    "            sample = np.concatenate([sample, np.random.choice(mc.n_states, size=1, p=mc.transition_matrix[draw])])\n",
+    "            sample = np.concatenate([sample, \\\n",
+    "                                     np.random.choice(self.n_states, size=1, p=self.transition_matrix[sample[-1]])])\n",
     "        return sample\n",
     "    \n",
     "    \n",
@@ -199,28 +265,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 525,
+   "execution_count": 1214,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.65932796, 0.34067204],\n",
-       "       [0.2       , 0.8       ],\n",
-       "       [0.76948658, 0.23051342],\n",
+       "array([[0.72086909, 0.27913091],\n",
+       "       [0.358     , 0.642     ],\n",
+       "       [0.8078944 , 0.1921056 ],\n",
        "       [0.95238095, 0.04761905],\n",
-       "       [0.9523574 , 0.0476426 ],\n",
-       "       [0.        , 1.        ]])"
+       "       [0.95236235, 0.04763765],\n",
+       "       [0.2       , 0.8       ]])"
       ]
      },
-     "execution_count": 525,
+     "execution_count": 1214,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "mc = MarkovChain(np.array([[0.99,0.01],[0.2,0.8]]),np.array([0,1]))\n",
-    "mc.iterate(0)\n",
+    "mc.iterate(1, set_state=True)\n",
     "mc.state_vector\n",
     "mc.transition_matrix\n",
     "mc.forecast([5,1,7,123,45,0])"
@@ -228,16 +294,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 526,
+   "execution_count": 1215,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(0.)"
+       "array([0.95238095, 0.04761905])"
       ]
      },
-     "execution_count": 526,
+     "execution_count": 1215,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mc.steady_state()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1216,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(0.72192809)"
+      ]
+     },
+     "execution_count": 1216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,88 +334,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 527,
+   "execution_count": 1217,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 1])"
+       "0.047039059218815626"
       ]
      },
-     "execution_count": 527,
+     "execution_count": 1217,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mc.state_vector.squeeze()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 528,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(0.)"
-      ]
-     },
-     "execution_count": 528,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mc.entropy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 529,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 0, 1, 0, 1, 0, 1, 1])"
-      ]
-     },
-     "execution_count": 529,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sample = np.random.choice(mc.n_states, size=1, p=mc.state_vector.squeeze())\n",
-    "#sample = [draw]\n",
-    "\n",
-    "for t in range(1, 20):\n",
-    "    sample = np.concatenate([sample, np.random.choice(mc.n_states, size=1, p=mc.transition_matrix[draw])])\n",
-    "        \n",
-    "sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 530,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 1, 1, 0])"
-      ]
-     },
-     "execution_count": 530,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mc.rvs(3)"
+    "mc.rvs(50000).mean()"
    ]
   },
   {
@@ -897,51 +917,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 933,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import warnings\n",
-    "\n",
-    "\n",
-    "class NormalModel:\n",
-    "    def __init__(self, mu=0, sigma=1):\n",
-    "        self.mu = mu\n",
-    "        self.sigma = sigma\n",
-    "        \n",
-    "    def fit(self, Y, weights=None):\n",
-    "        '''fits the model parameters to an observation sequence, weights are optional'''\n",
-    "        # prepare\n",
-    "        Y = np.array(Y).reshape(-1, 1)\n",
-    "        if weights is None:\n",
-    "            weights = np.ones(Y.shape)\n",
-    "        else:\n",
-    "            weights = np.array(weights).reshape(-1, 1)\n",
-    "        \n",
-    "        # estimate mean\n",
-    "        mean = (Y*weights).sum(axis=0)/weights.sum(axis=0)\n",
-    "        \n",
-    "        # estimate variance\n",
-    "        errors = (Y-mean)**2\n",
-    "        variance = (errors*weights).sum(axis=0)/weights.sum(axis=0)\n",
-    "        \n",
-    "        # update\n",
-    "        self.mu = mean\n",
-    "        self.sigma = np.sqrt(variance)\n",
-    "        \n",
-    "    def pdf(self, Y):\n",
-    "        '''returns the likelihood of each observation in an observation sequence'''\n",
-    "        pdf = 1/(self.sigma * np.sqrt(2*np.pi)) * np.exp(-0.5*(Y-self.mu)**2/self.sigma**2)\n",
-    "        return pdf\n",
-    "    \n",
-    "    def score(self, Y):\n",
-    "        '''returns the log-likelihood of an observation sequence'''\n",
-    "        score = np.log(self.pdf(Y)).sum()\n",
-    "        return score"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1147,
    "metadata": {},
    "outputs": [
@@ -1005,90 +980,6 @@
    "source": [
     "model = NormalModel().fit(x)\n",
     "model.mu"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1192,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import warnings\n",
-    "from scipy.stats import norm\n",
-    "\n",
-    "\n",
-    "class BaseModel:\n",
-    "    \n",
-    "    '''\n",
-    "    Base class for models\n",
-    "    '''\n",
-    "    \n",
-    "    def __init__(self):\n",
-    "        pass\n",
-    "    \n",
-    "    def score(self, Y):\n",
-    "        \n",
-    "        '''\n",
-    "        Returns the log-likelihood of an observation sequence\n",
-    "        '''\n",
-    "        \n",
-    "        score = np.log(self.pdf(Y)).sum()\n",
-    "        return score\n",
-    "\n",
-    "\n",
-    "class NormalModel(BaseModel):\n",
-    "    \n",
-    "    '''\n",
-    "    i.i.d. normal distribution model\n",
-    "    '''\n",
-    "    \n",
-    "    def __init__(self, mu=0, sigma=1):\n",
-    "        self.mu = mu\n",
-    "        self.sigma = sigma\n",
-    "    \n",
-    "    @property\n",
-    "    def loc(self):\n",
-    "        return self.mu\n",
-    "    \n",
-    "    @property\n",
-    "    def scale(self):\n",
-    "        return self.sigma\n",
-    "    \n",
-    "        \n",
-    "    def fit(self, Y, weights=None):\n",
-    "        \n",
-    "        '''\n",
-    "        Fits the model parameters to an observation sequence.\n",
-    "        weights are optional.\n",
-    "        '''\n",
-    "        \n",
-    "        # prepare\n",
-    "        Y = np.array(Y)\n",
-    "        if weights is None:\n",
-    "            weights = np.ones(Y.shape)\n",
-    "        else:\n",
-    "            weights = np.array(weights)\n",
-    "        \n",
-    "        # estimate mean\n",
-    "        mean = np.average(Y, weights=weights)\n",
-    "        \n",
-    "        # estimate variance\n",
-    "        errors = (Y-mean)**2\n",
-    "        variance = np.average(errors, weights=weights)\n",
-    "        \n",
-    "        # update\n",
-    "        self.mu = mean\n",
-    "        self.sigma = np.sqrt(variance)\n",
-    "        \n",
-    "    def pdf(self, Y):\n",
-    "        \n",
-    "        '''\n",
-    "        Returns the likelihood of each observation in an observation sequence.\n",
-    "        '''\n",
-    "        \n",
-    "        Y = np.array(Y)\n",
-    "        pdf = norm(loc=self.mu, scale=self.sigma).pdf(Y)\n",
-    "        return pdf\n"
    ]
   },
   {
