edit ProductDistribution class

--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -2306,7 +2306,7 @@
     "    def rvs(self, size=1, return_states=False):\n",
     "    \n",
     "        '''\n",
-    "        Draw a random sample from a mixture distribution\n",
+    "        Draw a random sample from a mixture distribution.\n",
     "        '''\n",
     "    \n",
     "        states = np.random.choice(self.n_components, size=size, replace=True, p=self.weights)\n",
@@ -2324,7 +2324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 651,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2342,61 +2342,91 @@
     "    def _check_factor(self, factor):\n",
     "        \n",
     "        '''\n",
-    "        Check the\n",
+    "        Checks factor inputs.\n",
     "        '''\n",
     "        \n",
-    "        assert\n",
-    "        \n",
+    "        assert isinstance(factor, BaseDistribution), \\\n",
+    "            'unknown factor distribution type'\n",
+    "\n",
     "        \n",
     "    @property\n",
     "    def factors(self):\n",
     "        \n",
     "        '''\n",
     "        List of factor distributions.\n",
-    "        Each element needs to be of type BaseDistribution.\n",
+    "        Each element needs to be instances of BaseDistribution.\n",
     "        '''\n",
     "        \n",
     "        return self._factors\n",
     "    \n",
     "    @factors.setter\n",
-    "    def factors(Self, factors):\n",
+    "    def factors(self, factors):\n",
+    "        assert type(factors) == list, \\\n",
+    "            'factors needs to be a list of tuples'\n",
     "        for factor in factors:\n",
-    "            \n",
+    "            self._check_factor(factor)\n",
+    "        self._factors = factors\n",
     "    \n",
     "    \n",
-    "    \n",
-    "    def __init__(self, factors_moments=[]):\n",
-    "        self.factors_moments = factors_moments\n",
-    "        self.n_factors = len(self.factors_moments)\n",
+    "    @property\n",
+    "    def n_factors(self):\n",
     "        \n",
-    "    def add_factor(self,factors_moments):\n",
-    "        self.factors_moments += [factors_moments]\n",
-    "        self.n_factors += 1\n",
+    "        '''\n",
+    "        Returns the number of factors.\n",
+    "        '''\n",
     "        \n",
+    "        return len(self.factors)\n",
+    "    \n",
+    "    \n",
+    "    def add_factor(self, factor):\n",
+    "        \n",
+    "        '''\n",
+    "        Adds a factor to the mixture distribution.\n",
+    "        Input needs to instance of BaseDistribution.\n",
+    "        '''\n",
+    "        \n",
+    "        self._check_factor(factor)\n",
+    "        self.factors = self.factors + [factor]\n",
+    "\n",
+    "\n",
     "    def mean(self):\n",
+    "        \n",
+    "        '''\n",
+    "        \n",
+    "        '''\n",
+    "        \n",
     "        prod = 1\n",
-    "        for factor in self.factors_moments:\n",
-    "            m = factor[0]\n",
+    "        for factor in self.factors:\n",
+    "            m = factor.mean()\n",
     "            prod *= m\n",
     "        mean = prod\n",
     "        return mean\n",
+    "    \n",
     "\n",
     "    def var(self):\n",
-    "        prod1,prod2 = 1,1\n",
-    "        for factor in self.factors_moments:\n",
-    "            (m,s) = (factor[0],factor[1])\n",
+    "        \n",
+    "        '''\n",
+    "        \n",
+    "        '''\n",
+    "        \n",
+    "        prod1, prod2 = 1, 1\n",
+    "        for factor in self.factors:\n",
+    "            (m, s) = (factor.mean(), factor.var())\n",
     "            prod1 *= m**2+s\n",
     "            prod2 *= m**2\n",
     "        var = prod1 - prod2\n",
     "        return var\n",
     "    \n",
-    "    def std(self):\n",
-    "        return self.var()**0.5\n",
     "\n",
     "    def skew(self):\n",
-    "        prod1,prod2,prod3 = 1,1,1\n",
-    "        for factor in self.factors_moments:\n",
-    "            (m,s,g) = (factor[0],factor[1],factor[2])\n",
+    "        \n",
+    "        '''\n",
+    "        \n",
+    "        '''\n",
+    "        \n",
+    "        prod1, prod2, prod3 = 1, 1, 1\n",
+    "        for factor in self.factors:\n",
+    "            (m, s, g) = (factor.mean(), factor.var(), factor.central_moment(3))\n",
     "            prod1 *= g+3*m*s+m**3\n",
     "            prod2 *= m*s+m**3\n",
     "            prod3 *= m**3\n",
@@ -2410,9 +2440,9 @@
     "        Note that the output value is the excess kurtosis.\n",
     "        '''\n",
     "        \n",
-    "        prod1,prod2,prod3,prod4 = 1,1,1,1\n",
-    "        for factor in self.factors_moments:\n",
-    "            (m,s,g,k) = (factor[0],factor[1],factor[2],factor[3])\n",
+    "        prod1, prod2, prod3, prod4 = 1, 1, 1, 1\n",
+    "        for factor in self.factors:\n",
+    "            (m, s, g, k) = (factor.mean(), factor.var(), factor.central_moment(3), factor.central_moment(4))\n",
     "            prod1 *= k+4*m*g+6*m**2*s+m**4\n",
     "            prod2 *= m*g+3*m**2*s+m**4\n",
     "            prod3 *= m**2*s+m**4\n",
@@ -2421,48 +2451,121 @@
     "        kurt = fourth_central_moment/(self.var()**2)-3\n",
     "        return kurt\n",
     "\n",
-    "    # def mvsk(self):\n",
-    "    #     m = self.mean()\n",
-    "    #     v = self.var()\n",
-    "    #     s = self.skew()\n",
-    "    #     k = self.kurt()\n",
-    "    #     return (m,v,s,k)"
+    "\n",
+    "    def rvs(self, size=1):\n",
+    "        \n",
+    "        '''\n",
+    "        Returns a random sample drawn from a mixture distribution\n",
+    "        '''\n",
+    "        \n",
+    "        sample = np.ones(size)\n",
+    "        for factor in self.factors:\n",
+    "            sample *= factor.rvs(size=size)\n",
+    "\n",
+    "        if size is 1:\n",
+    "            sample = sample[0]\n",
+    "            \n",
+    "        return sample\n",
+    "\n",
+    "    \n",
+    "    def pdf(self):\n",
+    "        raise NotImplementedError('exact pdf unknown')\n",
+    "        \n",
+    "    \n",
+    "    def cdf(self):\n",
+    "        raise NotImplementedError('exact cdf unknown')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 652,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fac1 = NormalDistribution(1.1, 1)\n",
+    "fac2 = NormalDistribution(1.1, 5)\n",
+    "factors = [fac1, fac2]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 653,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1.2100000000000002, 1.1656170984811676)"
+      ]
+     },
+     "execution_count": 653,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ProductDistribution(factors).mean(), np.array(ProductDistribution(factors).rvs(100000)).mean()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 654,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(56.46, 56.36563127196206)"
+      ]
+     },
+     "execution_count": 654,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ProductDistribution(factors).var(), np.array(ProductDistribution(factors).rvs(100000)).var()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 655,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.4278241721532276, 0.4223699475367983)"
+      ]
+     },
+     "execution_count": 655,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(ProductDistribution(factors).skew(), sp.stats.skew(ProductDistribution(factors).rvs(100000)))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 656,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4.137111167075675, 4.041983551214804)"
+      ]
+     },
+     "execution_count": 656,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(ProductDistribution(factors).kurt(), sp.stats.kurtosis(ProductDistribution(factors).rvs(100000)))"
+   ]
   },
   {
    "cell_type": "code",
