add __str__ methods to distributions

--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -84,7 +84,7 @@
     {
      "data": {
       "text/plain": [
-       "<src.markov.MarkovChain at 0x7f5784549358>"
+       "<src.markov.MarkovChain at 0x7f9a9efb3240>"
       ]
      },
      "execution_count": 4,
@@ -160,7 +160,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Distributions"
+    "## Distributions\n",
+    "### Normal Distribution"
    ]
   },
   {
@@ -169,9 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fac1 = src.NormalDistribution(1.1, 2)\n",
-    "fac2 = src.NormalDistribution(1.1, 5)\n",
-    "factors = [fac1, fac2]"
+    "norm = src.NormalDistribution(1.1, 2)"
    ]
   },
   {
@@ -180,12 +179,111 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NormalDistribution(mu=1.1, sigma=2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(norm)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mixture Distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comp1 = (src.NormalDistribution(1.1, 2), 0.3)\n",
+    "comp2 = (src.NormalDistribution(1.1, 5), 0.7)\n",
+    "components = [comp1, comp2]\n",
+    "mix = src.MixtureDistribution(components=components)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MixtureDistribution(\n",
+      "\t NormalDistribution(mu=1.1, sigma=2), weight=0.3,\n",
+      "\t NormalDistribution(mu=1.1, sigma=5), weight=0.7,\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mix)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Product Distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fac1 = src.NormalDistribution(1.1, 2)\n",
+    "fac2 = src.NormalDistribution(1.1, 5)\n",
+    "factors = [fac1, fac2, mix]\n",
+    "prod = src.ProductDistribution(factors=factors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ProductDistribution(\n",
+      "\t NormalDistribution(mu=1.1, sigma=2),\n",
+      "\t NormalDistribution(mu=1.1, sigma=5),\n",
+      "\t MixtureDistribution(\n",
+      "\t NormalDistribution(mu=1.1, sigma=2), weight=0.3,\n",
+      "\t NormalDistribution(mu=1.1, sigma=5), weight=0.7,\n",
+      "),\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(prod)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +303,7 @@
        "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,18 +314,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1.2100000000000002, 1.2186759796158178)"
+       "(1.2100000000000002, 1.188926898565253)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,16 +334,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(11.62282237668631, 11.547593195716336)"
+       "(11.62282237668631, 11.603182709688648)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,16 +354,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.46238295716396305, 0.41775628222426536)"
+       "(0.46238295716396305, 0.40360790944312697)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,22 +375,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(5.595171030073189, 5.640818971771198)"
+       "(5.595171030073189, 5.604115216435607)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "(src.ProductDistribution(factors).kurt(), sp.stats.kurtosis(src.ProductDistribution(factors).rvs(1000000)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NormalDistribution(mu=1.1, sigma=2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(fac1)"
    ]
   },
   {
@@ -603,9 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -891,9 +1002,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
