fix distribution moments

--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -84,7 +84,7 @@
     {
      "data": {
       "text/plain": [
-       "<src.markov.MarkovChain at 0x7f9a9efb3240>"
+       "<src.markov.MarkovChain at 0x7ffac15839e8>"
       ]
      },
      "execution_count": 4,
@@ -191,6 +191,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -203,8 +210,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "comp1 = (src.NormalDistribution(1.1, 2), 0.3)\n",
-    "comp2 = (src.NormalDistribution(1.1, 5), 0.7)\n",
+    "comp1 = (src.NormalDistribution(1.1, 0.2), 0.3)\n",
+    "comp2 = (src.NormalDistribution(1.2, 0.3), 0.7)\n",
     "components = [comp1, comp2]\n",
     "mix = src.MixtureDistribution(components=components)"
    ]
@@ -219,8 +226,8 @@
      "output_type": "stream",
      "text": [
       "MixtureDistribution(\n",
-      "\t NormalDistribution(mu=1.1, sigma=2), weight=0.3,\n",
-      "\t NormalDistribution(mu=1.1, sigma=5), weight=0.7,\n",
+      "\t NormalDistribution(mu=1.1, sigma=0.2), weight=0.3,\n",
+      "\t NormalDistribution(mu=1.2, sigma=0.3), weight=0.7,\n",
       ")\n"
      ]
     }
@@ -238,19 +245,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fac1 = src.NormalDistribution(1.1, 2)\n",
-    "fac2 = src.NormalDistribution(1.1, 5)\n",
-    "factors = [fac1, fac2, mix]\n",
+    "fac1 = src.NormalDistribution(1.1, 0.1)\n",
+    "fac2 = src.NormalDistribution(1.2, 0.2)\n",
+    "fac3 = src.NormalDistribution(2, 8)\n",
+    "factors = [fac1, fac2]#, fac3]\n",
+    "#factors = [fac1, fac2, mix]\n",
     "prod = src.ProductDistribution(factors=factors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -258,12 +267,8 @@
      "output_type": "stream",
      "text": [
       "ProductDistribution(\n",
-      "\t NormalDistribution(mu=1.1, sigma=2),\n",
-      "\t NormalDistribution(mu=1.1, sigma=5),\n",
-      "\t MixtureDistribution(\n",
-      "\t NormalDistribution(mu=1.1, sigma=2), weight=0.3,\n",
-      "\t NormalDistribution(mu=1.1, sigma=5), weight=0.7,\n",
-      "),\n",
+      "\t NormalDistribution(mu=1.1, sigma=0.1),\n",
+      "\t NormalDistribution(mu=1.2, sigma=0.2),\n",
       ")\n"
      ]
     }
@@ -274,140 +279,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "(0.00030000000000000003, 0.0048000000000000004)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "isinstance(fac1, src.BaseDistribution)"
+    "mom = 4\n",
+    "prod.factors[0].central_moment(mom), prod.factors[1].central_moment(mom)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "(2.999999999999999, 2.999999999999999)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "isinstance(fac1, src.NormalDistribution)"
+    "prod.factors[0].standardised_moment(mom), prod.factors[1].standardised_moment(mom)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1.2100000000000002, 1.188926898565253)"
+       "(0.010000000000000002, 0.04000000000000001)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "src.ProductDistribution(factors).mean(), np.array(src.ProductDistribution(factors).rvs(100000)).mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(11.62282237668631, 11.603182709688648)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "src.ProductDistribution(factors).std(), np.array(src.ProductDistribution(factors).rvs(100000)).std()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.46238295716396305, 0.40360790944312697)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import scipy as sp\n",
-    "(src.ProductDistribution(factors).skew(), sp.stats.skew(src.ProductDistribution(factors).rvs(100000)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(5.595171030073189, 5.604115216435607)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(src.ProductDistribution(factors).kurt(), sp.stats.kurtosis(src.ProductDistribution(factors).rvs(1000000)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NormalDistribution(mu=1.1, sigma=2\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(fac1)"
+    "prod.factors[0].var(), prod.factors[1].var()"
    ]
   },
   {
@@ -416,6 +344,93 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1.32, 1.3166587016965472)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prod.mean(), np.array(prod.rvs(10000)).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.251396101799531, 0.2534093032824622)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prod.std(), np.array(prod.rvs(10000)).std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.19939283831248505, 0.18059056469983228)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prod.skew(), sp.stats.skew(prod.rvs(10000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3.0757090209892204, 3.022231683144111)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prod.kurt(), sp.stats.kurtosis(prod.rvs(10000), fisher=False)"
+   ]
   },
   {
    "cell_type": "markdown",
